@@ -9,7 +9,7 @@ begin
       @rails_app_path = File.dirname(__FILE__) + '/../rails_app'
       @request = Rack::MockRequest.new(Rack::Adapter::Rails.new(:root => @rails_app_path))
     end
-  
+    
     it "should handle simple GET request" do
       res = @request.get("/simple", :lint => true)
 
@@ -103,4 +103,71 @@ begin
 
 rescue Gem::LoadError
   warn 'Rails 2.0.2 is required to run the Rails adapter specs'
+end
+
+module RailsMock
+  module VERSION
+    MAJOR = 0
+    MINOR = 0
+    TINY = 0
+  end
+end
+
+describe Rack::Adapter::Rails, "Adapter version" do
+  before do
+    unless defined?(::Rails)
+      ::Rails = RailsMock
+    end
+  end
+  
+  it "should use Rack based adapter when Rails = 2.2.3" do
+    with_rails_version(2, 2, 3) do
+      Rack::Adapter::Rails.should be_rack_based
+    end
+  end
+
+  it "should not use Rack based adapter when Rails < 2.2.3" do
+    with_rails_version(2, 2, 2) do
+      Rack::Adapter::Rails.should_not be_rack_based
+    end
+  end
+
+  it "should not use Rack based adapter when Rails = 1.2.3" do
+    with_rails_version(1, 2, 2) do
+      Rack::Adapter::Rails.should_not be_rack_based
+    end
+  end
+  
+  it "should use Rack based adapter when Rails = 3.0.0" do
+    with_rails_version(3, 0, 0) do
+      Rack::Adapter::Rails.should be_rack_based
+    end
+  end
+  
+  def with_rails_version(major, minor, tiny)
+    old_major = ::Rails::VERSION::MAJOR
+    old_minor = ::Rails::VERSION::MINOR
+    old_tiny = ::Rails::VERSION::TINY
+    
+    silence_warnings do
+      ::Rails::VERSION.const_set :MAJOR, major
+      ::Rails::VERSION.const_set :MINOR, minor
+      ::Rails::VERSION.const_set :TINY, tiny
+    end
+    
+    yield
+    
+    silence_warnings do
+      ::Rails::VERSION.const_set :MAJOR, old_major
+      ::Rails::VERSION.const_set :MINOR, old_minor
+      ::Rails::VERSION.const_set :TINY, old_tiny
+    end
+  end
+  
+  def silence_warnings
+    old_verbose, $VERBOSE = $VERBOSE, nil
+    yield
+  ensure
+    $VERBOSE = old_verbose
+  end unless method_defined?(:silence_warnings)
 end
