@@ -1,4 +1,5 @@
 == 1.2.8 Does It Offend You, Yeah?
+ * Fix Rails version check that select which Rack adapter to use. Was using CGI adapter in Rails 3.
  * Ignore SIGHUP when no restart block is given
 
 == 1.2.7 No Hup
